; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tskiplist.c_getKeyComparator.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tskiplist.c_getKeyComparator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compareIntVal = common dso_local global i32* null, align 8
@compareDoubleVal = common dso_local global i32* null, align 8
@compareStrVal = common dso_local global i32* null, align 8
@compareWStrVal = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @getKeyComparator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @getKeyComparator(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %13 [
    i32 128, label %5
    i32 129, label %5
    i32 131, label %5
    i32 136, label %5
    i32 134, label %5
    i32 132, label %7
    i32 133, label %7
    i32 135, label %9
    i32 130, label %11
  ]

5:                                                ; preds = %1, %1, %1, %1, %1
  %6 = load i32*, i32** @compareIntVal, align 8
  store i32* %6, i32** %3, align 8
  br label %15

7:                                                ; preds = %1, %1
  %8 = load i32*, i32** @compareDoubleVal, align 8
  store i32* %8, i32** %3, align 8
  br label %15

9:                                                ; preds = %1
  %10 = load i32*, i32** @compareStrVal, align 8
  store i32* %10, i32** %3, align 8
  br label %15

11:                                               ; preds = %1
  %12 = load i32*, i32** @compareWStrVal, align 8
  store i32* %12, i32** %3, align 8
  br label %15

13:                                               ; preds = %1
  %14 = load i32*, i32** @compareIntVal, align 8
  store i32* %14, i32** %3, align 8
  br label %15

15:                                               ; preds = %13, %11, %9, %7, %5
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
